--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -128,7 +128,6 @@ set_real_ip_from 146.59.231.4;
 set_real_ip_from 146.70.146.26;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
-set_real_ip_from 148.113.152.91;
 set_real_ip_from 148.135.35.244;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -149,6 +148,7 @@ set_real_ip_from 154.213.187.66;
 set_real_ip_from 154.213.187.98;
 set_real_ip_from 154.213.192.19;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 155.4.219.14;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
@@ -639,7 +639,6 @@ set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
 set_real_ip_from 193.32.162.96;
 set_real_ip_from 193.36.132.21;
-set_real_ip_from 193.43.72.218;
 set_real_ip_from 193.70.80.213;
 set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
@@ -794,6 +793,7 @@ set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b1:c300:3043::610;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4006:9e54::b;
 set_real_ip_from 2001:b030:2422::7234;
@@ -1017,7 +1017,6 @@ set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:a140:2236:4415::1;
 set_real_ip_from 2605:aa80:0:9::3;
-set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::3dde;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
