--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -15,6 +15,7 @@ set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
+set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
 set_real_ip_from 104.244.73.136;
 set_real_ip_from 104.244.73.190;
@@ -183,7 +184,6 @@ set_real_ip_from 172.104.186.73;
 set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.161.162;
 set_real_ip_from 172.105.174.195;
-set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.139;
@@ -194,7 +194,6 @@ set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.113.53;
@@ -253,6 +252,7 @@ set_real_ip_from 185.112.146.167;
 set_real_ip_from 185.113.128.30;
 set_real_ip_from 185.117.215.9;
 set_real_ip_from 185.120.16.171;
+set_real_ip_from 185.120.16.176;
 set_real_ip_from 185.129.61.1;
 set_real_ip_from 185.129.61.10;
 set_real_ip_from 185.129.61.129;
@@ -278,6 +278,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -643,6 +644,7 @@ set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
 set_real_ip_from 194.233.174.56;
+set_real_ip_from 194.26.192.142;
 set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.72;
 set_real_ip_from 194.26.192.77;
@@ -893,7 +895,6 @@ set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:94ff:fe7f:59f6;
 set_real_ip_from 2400:8901::f03c:95ff:fe89:4a88;
-set_real_ip_from 2400:8905::f03c:95ff:fe67:ec03;
 set_real_ip_from 2400:8907::f03c:95ff:fe79:8c79;
 set_real_ip_from 2400:d320:2202:5765::1;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -1005,6 +1006,7 @@ set_real_ip_from 2605:6400:30:f7ca::2;
 set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
+set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
 set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -1405,6 +1407,7 @@ set_real_ip_from 2a10:1fc0:1::c758:3168;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+set_real_ip_from 2a12:a800:1:1:194:26:192:142;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
 set_real_ip_from 2a12:a800:1:1:2:58:56:220;
@@ -1533,7 +1536,6 @@ set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.80.158.69;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.21.193;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1678,6 +1680,7 @@ set_real_ip_from 89.37.95.34;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
 set_real_ip_from 91.132.144.59;
+set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.145.116;
