--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -112,6 +112,7 @@ deny 2001:df7:7400:c10d:216:3eff:fecd:511a;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2400:8901::f03c:94ff:fe7f:59f6;
 deny 2400:8901::f03c:95ff:fe89:4a88;
+deny 2400:8905::f03c:95ff:fe67:ec03;
 deny 2400:8907::f03c:95ff:fe79:8c79;
 deny 2400:d320:2202:5765::1;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
