--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -14,7 +14,6 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
-allow 104.194.87.207;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -842,6 +841,7 @@ allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
+allow 216.9.224.106;
 allow 217.12.221.131;
 allow 217.64.151.73;
 allow 217.79.189.239;
@@ -849,6 +849,7 @@ allow 23.129.64.171;
 allow 23.129.64.172;
 allow 23.129.64.173;
 allow 23.137.248.100;
+allow 23.137.248.192;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
@@ -864,6 +865,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -921,6 +923,7 @@ allow 2602:2e6:0:4::;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:10:dbf5:a282:c7a5:8a27:3861;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
