--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -132,6 +132,7 @@ allow 2602:2e6:0:4::;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:10:dbf5:a282:c7a5:8a27:3861;
 allow 2602:fc24:12:81a6::1;
+allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
