--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -841,7 +841,6 @@ allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
-allow 216.9.224.106;
 allow 217.12.221.131;
 allow 217.64.151.73;
 allow 217.79.189.239;
@@ -921,7 +920,7 @@ allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:10:61b::1;
-allow 2602:fc24:10:dbf5:a282:c7a5:8a27:3861;
+allow 2602:fc24:10:dbf5:1:1:fa9:a55;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
@@ -1576,6 +1575,7 @@ allow 5.196.95.34;
 allow 5.255.100.206;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.131;
 allow 5.255.102.89;
 allow 5.255.103.235;
