--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -841,7 +841,6 @@ deny 213.95.149.22;
 deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
-deny 216.9.224.106;
 deny 217.12.221.131;
 deny 217.64.151.73;
 deny 217.79.189.239;
@@ -921,7 +920,7 @@ deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:10:61b::1;
-deny 2602:fc24:10:dbf5:a282:c7a5:8a27:3861;
+deny 2602:fc24:10:dbf5:1:1:fa9:a55;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
@@ -1576,6 +1575,7 @@ deny 5.196.95.34;
 deny 5.255.100.206;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.131;
 deny 5.255.102.89;
 deny 5.255.103.235;
