--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -130,7 +130,7 @@ deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:10:61b::1;
-deny 2602:fc24:10:dbf5:a282:c7a5:8a27:3861;
+deny 2602:fc24:10:dbf5:1:1:fa9:a55;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
