--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -278,7 +278,6 @@ deny 185.153.197.227;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.84;
 deny 185.170.114.25;
 deny 185.183.157.214;
@@ -541,7 +540,6 @@ deny 185.56.83.83;
 deny 185.67.82.114;
 deny 185.7.33.146;
 deny 185.82.219.109;
-deny 185.91.126.90;
 deny 188.165.200.97;
 deny 188.214.104.21;
 deny 188.239.191.25;
@@ -1053,7 +1051,6 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2970:1001::4b;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
@@ -1359,6 +1356,7 @@ deny 2a0c:5700:3133:1705:be24:11ff:fef5:7c39;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:5f9b::1;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
 deny 2a0d:bbc7:0:1::394;
@@ -1539,7 +1537,6 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
-deny 45.83.21.193;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
@@ -1555,7 +1552,6 @@ deny 45.95.169.229;
 deny 45.95.169.255;
 deny 46.101.107.151;
 deny 46.165.243.36;
-deny 46.182.21.248;
 deny 46.232.251.191;
 deny 46.234.47.105;
 deny 47.243.99.161;
@@ -1704,6 +1700,7 @@ deny 92.243.24.163;
 deny 92.246.138.145;
 deny 92.246.84.133;
 deny 92.33.155.77;
+deny 93.113.25.147;
 deny 93.113.25.189;
 deny 93.113.25.251;
 deny 93.123.12.112;
