--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,6 +13,7 @@ set_real_ip_from 103.28.52.93;
 set_real_ip_from 104.167.242.116;
 set_real_ip_from 104.167.242.117;
 set_real_ip_from 104.167.242.118;
+set_real_ip_from 104.168.139.247;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.244.72.115;
@@ -283,6 +284,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -826,7 +828,6 @@ set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.60.219;
 set_real_ip_from 209.141.61.52;
-set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
 set_real_ip_from 212.38.189.186;
 set_real_ip_from 212.69.167.80;
@@ -1019,6 +1020,7 @@ set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
+set_real_ip_from 2607:5501:3000:a97::2;
 set_real_ip_from 2607:f130:0:ed:216:3cff:febd:3b42;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2620:18c:0:192::171;
